Prevent overflowing images causing horizontal scroll:
- Prevent images on home page in the BROWSE FREELY section from overflowing
- Added .row--limit-overflow class as a modifier on .row

--- a/assets/scss/_tpo.scss
+++ b/assets/scss/_tpo.scss
@@ -144,3 +144,10 @@ main{
  @include media-breakpoint-up(lg) {
 
  }
+
+.row--limit-overflow {
+  position: relative;
+  overflow: hidden;
+  width: 100vw;
+  left: -($grid-gutter-width/2);
+}
